--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,1 +1,17 @@
-<h1>hello new</h1>
+<div class="container">
+
+  <h1>New Venue</h1>
+
+  <%= simple_form_for(@venue) do |v| %>
+  <%= v.input :name %>
+  <%= v.input :address_line_1 %>
+  <%= v.input :address_line_2 %>
+  <%= v.input :city %>
+  <%= v.input :cost_per_hour %>
+  <%= v.input :post_code %>
+  <%= v.input :surface %>
+  <%= v.input :floodlit %>
+  <%= v.button :submit %>
+  <% end %>
+
+</div>
