--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,4 +1,6 @@
 <h1>hello index</h1>
-<% @venues.each do |venue| %>
-<%= venue.name %>
-<% end %>
+<ul>
+  <% @venues.each do |venue| %>
+  <li><%= link_to venue.name, venue_path(venue) %></li>
+  <% end %> 
+</ul>
