--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Matches</h1>
 <ul>
   <% @matches.each do |match| %>
-  <li><%= link_to match.start_time, match_path(match) %></li>
+  <li><%= link_to match.title, match_path(match) %></li>
   <% end %> 
 </ul>
