--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,5 +2,7 @@
 <ul>
   <% @matches.each do |match| %>
   <li><%= link_to match.title, match_path(match) %></li>
+  <%= link_to 'edit match', edit_match_path(match) %>
+  <%= link_to 'delete match', match_path(match), method: :destroy %>
   <% end %> 
 </ul>
