--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
 <h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
+<%= link_to 'matches', matches_path %>
+<%= link_to 'venues', venues_path %>
+<%= link_to 'dashboard', dashboard_path %>
