--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,6 +1,8 @@
 <h1>hello index</h1>
+<%= link_to 'add a venue', new_venue_path %>
 <ul>
   <% @venues.each do |venue| %>
   <li><%= link_to venue.name, venue_path(venue) %></li>
+  <%= link_to 'edit', edit_venue_path(venue) %>
   <% end %> 
 </ul>
