--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Matches</h1>
+<%= link_to 'create a match', venues_path %>
 <ul>
   <% @matches.each do |match| %>
   <li><%= link_to match.title, match_path(match) %></li>
