finished action text. added reivews to venues

--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -1,2 +1,17 @@
-<h1><%= @venue.name.upcase %></h1>
-<%= link_to 'create match', new_venue_match_path(@venue) %>
+<div class="container">
+  <h1><%= @venue.name.upcase %></h1>
+  <%= link_to 'create match', new_venue_match_path(@venue) %>
+
+
+
+
+
+  <%= simple_form_for [@venue, @review] do |r| %>
+    <div class="form-inputs">
+      <%= r.rich_text_area :rich_body %>
+    </div>
+    <div class="form-actions">
+      <%= r.button :submit %>
+    </div>
+  <% end %>
+</div>
