Cloudinary setup added

--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -2,5 +2,6 @@
 <ul>
   <% @venues.each do |venue| %>
   <li><%= link_to venue.name, venue_path(venue) %></li>
+  <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill  %>
   <% end %> 
 </ul>
