--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -5,7 +5,7 @@
   <li>
     <%= link_to venue.name, venue_path(venue) %>
     <%= link_to 'edit', edit_venue_path(venue) %>
-    <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill  %>
+    <%# <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill  %> %>
   </li>
   <% end %> 
 </ul>
