--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -3,6 +3,7 @@
   <h1>New Match</h1>
 
   <%= simple_form_for [@venue, @match] do |m| %>
+  <%= m.association :venue, selected: "#{@venue.id}" %>
   <%= m.input :title, placeholder: "Friendly game" %>
   <%= m.input :no_of_players, collection: ["5 Players", "7 Players", "11 Players"] %>
   <%= m.input :skill_level, as: :radio_buttons, collection: ["Just for fun", "Try Hard"] %>
