--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -3,9 +3,15 @@
 <ul>
   <% @venues.each do |venue| %>
   <li>
-    <%= link_to venue.name, venue_path(venue) %>
-    <%= link_to 'edit', edit_venue_path(venue) %>
-    <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill  %>
+    <% if venue.photo.attached? %>
+      <%= link_to venue.name, venue_path(venue) %>
+      <%= link_to 'edit', edit_venue_path(venue) %>
+      <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill  %>
+    <% else %>
+      <%= link_to venue.name, venue_path(venue) %>
+      <%= link_to 'edit', edit_venue_path(venue) %>
+      <%= image_tag('under_construction.jpg', height: 200, width: 300, crop: :fill) %>
+    <% end %>
   </li>
   <% end %> 
 </ul>
