--- a/app/views/venues/edit.html.erb
+++ b/app/views/venues/edit.html.erb
@@ -1,1 +1,16 @@
-<h1>hello edit</h1>
+<div class="container">
+  <h1>hello edit</h1>
+  <%= simple_form_for(@venue) do |v| %>
+    <%= v.input :name %>
+    <%= v.input :address_line_1 %>
+    <%= v.input :address_line_2 %>
+    <%= v.input :city %>
+    <%= v.input :cost_per_hour %>
+    <%= v.input :post_code %>
+    <%= v.input :surface %>
+    <%= v.input :floodlit %>
+    <%= v.input :photo, as: :file %>
+    <%= v.button :submit %>
+  <% end %>
+</div>
+
