--- a/app/views/matches/edit.html.erb
+++ b/app/views/matches/edit.html.erb
@@ -1,1 +1,16 @@
-<h1>matches edit</h1>
+<div class="container">
+
+  <h1>matches edit</h1>
+
+  <%= simple_form_for [@venue, @match] do |m| %>
+  <%= m.association :venue %>
+  <%= m.input :title, placeholder: "Friendly game" %>
+  <%= m.input :no_of_players, collection: ["5 Players", "7 Players", "11 Players"] %>
+  <%= m.input :skill_level, as: :radio_buttons, collection: ["Just for fun", "Try Hard"] %>
+  <%= m.input :start_time %>
+  <%= m.input :end_time %>
+  <%= m.input :description %>
+  <%= m.button :submit %>
+  <% end %>
+
+</div>
