--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -15,3 +15,8 @@
   </li>
   <% end %> 
 </ul>
+
+<div id="map"
+     style="width: 100%; height: 600px;"
+     data-markers="<%= @markers.to_json %>"
+     data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>"></div>
