--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,3 +3,12 @@
 <%= link_to 'matches', matches_path %>
 <%= link_to 'venues', venues_path %>
 <%= link_to 'dashboard', dashboard_path %>
+
+<%= form_tag matches_path, method: :get do %>
+  <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+    placeholder: "Find a match"
+  %>
+  <%= submit_tag "Search", class: "btn btn-primary" %>
+<% end %>
