--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -2,7 +2,7 @@
 <%# <%= link_to 'create a match', new_venue_match_path %> %>
 <ul>
   <% @matches.each do |match| %>
-  <li><%= link_to match.title, match_path(match) %></li>
+  <li><%= link_to match.title, match_path(match) %> <%=match.venue.city%> </li>
   <%= link_to 'edit match', edit_match_path(match) %>
   <%= link_to 'delete match', match_path(match),  method: :delete, data: { confirm: "Are you sure?" } %>
   <% end %> 
