--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -17,6 +17,7 @@
 </ul>
 
 <div id="map"
-     style="width: 100%; height: 600px;"
-     data-markers="<%= @markers.to_json %>"
-     data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>"></div>
+    style="width: 100%; height: 600px;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
+</div>
