--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,23 +1,25 @@
-<h1>hello index</h1>
-<%= link_to 'add a venue', new_venue_path %>
-<ul>
-  <% @venues.each do |venue| %>
-  <li>
-    <% if venue.photo.attached? %>
-      <%= link_to venue.name, venue_path(venue) %>
-      <%= link_to 'edit', edit_venue_path(venue) %>
-      <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill %>
-    <% else %>
-      <%= link_to venue.name, venue_path(venue) %>
-      <%= link_to 'edit', edit_venue_path(venue) %>
-      <%= image_tag('under_construction.jpg', height: 200, width: 300, crop: :fill) %>
-    <% end %>
-  </li>
-  <% end %> 
-</ul>
+<div class="container">
 
-<div id="map"
-    style="width: 100%; height: 600px;"
-    data-markers="<%= @markers.to_json %>"
-    data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
+  <h1>hello index</h1>
+  <%= link_to 'add a venue', new_venue_path %>
+  <ul>
+    <% @venues.each do |venue| %>
+    <li>
+      <%= link_to venue.name, venue_path(venue) %>
+      <%= link_to 'edit', edit_venue_path(venue) %>
+      <% if venue.photo.attached? %>
+        <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill %>
+      <% else %>
+        <%= image_tag('under_construction.jpg', height: 200, width: 300, crop: :fill) %>
+      <% end %>
+    </li>
+    <% end %> 
+  </ul>
+
+  <div id="map"
+      style="width: 100%; height: 600px;"
+      data-markers="<%= @markers.to_json %>"
+      data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
+  </div>
+  
 </div>
