made the venue id optional. can now make matches from venues and matches index

--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Matches</h1>
-<%# <%= link_to 'create a match', new_venue_match_path %> %>
+<%= link_to 'create a match', new_match_path %>
 <ul>
   <% @matches.each do |match| %>
   <li><%= link_to match.title, match_path(match) %> <%=match.venue.city%> </li>
