--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -20,3 +20,6 @@
      style="width: 100%; height: 600px;"
      data-markers="<%= @markers.to_json %>"
      data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>"></div>
+<div id="full_address">
+  
+</div>
