trying to show map next to cards

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,4 +17,6 @@
 @import 'mapbox-gl/dist/mapbox-gl';
 @import '@mapbox/mapbox-gl-geocoder/dist/mapbox-gl-geocoder';
 @import 'components/mapbox_photo';
-
+@import "components/cards";
+@import "components/newcard";
+@import "components/my-container";
