--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -1,27 +1,33 @@
-<div class="container">
-
+<div>
   <h1>hello index</h1>
-  <%= link_to 'add a venue', new_venue_path %>
-  <ul>
-    <% @venues.each do |venue| %>
-    <li>
-      <%= link_to venue.name, venue_path(venue) %>
-      <%= link_to 'edit', edit_venue_path(venue) %>
-      <% if venue.photo.attached? %>
-        <%= cl_image_tag venue.photo.key, height: 300, width: 400, crop: :fill %>
-      <% else %>
-        <%= image_tag('under_construction.jpg', height: 200, width: 300, crop: :fill) %>
-      <% end %>
-    </li>
-    <% end %> 
-  </ul>
+  <%= link_to 'add a venue', new_venue_path, class: "button" %>
 
-
-  <div id="map"
-      style="width: 100%; height: 600px;"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
+  <div class="my-container">
+    <div class="cards">
+      <% @venues.each do |venue| %>
+        <div class="newcard">
+        <% if venue.photo.attached? %>
+          <%= cl_image_tag venue.photo.key, height: 300, width: 291, crop: :fill %>
+        <% else %>
+          <%= image_tag('under_construction.jpg', height: 300, width: 290, crop: :fill) %>
+        <% end %>
+        <div>
+          <%= link_to venue.name, venue_path(venue) %>
+          <%= link_to 'edit', edit_venue_path(venue) %>
+        </div>
+        </div>
+      <% end %> 
+    </div>
+    
+    <div id="map"
+        style="width: 600px; height: 100vh;"
+        data-markers="<%= @markers.to_json %>"
+        data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
+    </div>
+    
   </div>
-  
 </div>
+
+
+
 
