--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -3,12 +3,13 @@
   border: none;
   border-radius: 8px;
   color: #013D17;
-  padding: 15px 32px;
+  padding: 8px 8px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 24px;
+  font-size: 16px;
   font-weight: 400;
+  margin-bottom: 16px;
 }
 
 .button:hover {
@@ -19,4 +20,10 @@
 
 a:hover {
   text-decoration: none;
+}
+
+.button.position-top{
+  position: absolute;
+  bottom: 730px;
+  margin-left: 8px;
 }
