--- a/app/assets/stylesheets/components/_newcard.scss
+++ b/app/assets/stylesheets/components/_newcard.scss
@@ -1,6 +1,16 @@
-.newcard {
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  align-items: center;
-}
+// .newcard {
+//   background-size: cover;
+//   background-position: center;
+//   display: flex;
+//   align-items: center;
+// }
+// .newcard{
+//   background-size: cover;
+//   background-position: center;
+//   box-shadow: 0 0 10px rgba(0,0,0,0.2);
+//   align-items: center;
+//   justify-content: space-around;
+//   font-size: 22px;
+//   color: white;
+//   text-shadow: 0 0 10px rgba(0,0,0,0.7);
+// }
