--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -8,7 +8,7 @@
           <% if venue.photo.attached? %>
             <div class="newcard" style="background-image: url('<%= cl_image_path venue.photo.key, height: 300, width: 400, crop: :fill, gravity: :auto %>')">
           <% else %>
-            <div class="newcard" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= image_tag 'under_construction' %>')">
+            <div class="newcard" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://static-cse.canva.com/blob/135830/under-construction-signage-on-laptop-keyboard-211122.jpg')">
           <% end %>
           <div class="">
             <%= link_to venue.name, venue_path(venue) %>
