started styling. Map not working. Lots still to do

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -7,3 +7,14 @@
   text-align: center;
   color: white;
 }
+
+.banner_matchshow {
+  margin-bottom: 24px;
+  background-position: center;
+  background-size: cover;
+  height: 50vh;
+  padding-top: 200px;
+  padding-left: 13.5%;
+  text-align: left;
+  color: white;
+}
