--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -42,3 +42,9 @@
   </div>
 
 </div>
+
+<div id="map"
+  style="width: 600px; height: 100vh;"
+  data-markers="<%= @markers.to_json %>"
+  data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
+</div>
