--- a/app/views/venues/show.html.erb
+++ b/app/views/venues/show.html.erb
@@ -43,8 +43,8 @@
 
 </div>
 
-<div id="map"
-  style="width: 600px; height: 100vh;"
-  data-markers="<%= @markers.to_json %>"
+<div id="map-venueshow"
+  style="width: 100vw; height: 600px;"
+  data-markers="<%= @marker.to_json %>"
   data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
 </div>
