--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -24,6 +24,14 @@ a:hover {
 
 .button.position-top{
   position: absolute;
-  bottom: 730px;
   margin-left: 8px;
+  margin-top: 8px;
+}
+
+.toggle-content {
+	display: none;
+}
+
+.toggle-content.is-visible {
+	display: block;
 }
