--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,5 +1,9 @@
-<h1> hello dashboard</h1>
-<% current_user.bookings.each do |booking| %>
-  <%= booking.match.start_time %>
-  <%= booking.match.end_time %>
-<% end %>
+<h1> Your Dashboard</h1>
+<div class="container">
+  
+  <% current_user.bookings.each do |booking| %>
+    <%= booking.match.title %>
+    <%= booking.match.start_time %>
+    <%= booking.match.end_time %>
+  <% end %>
+</div>
