--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -3,16 +3,12 @@
 <div class="container">
 
   <%= link_to 'back to matches', matches_path, class: "button" %>
-
-  <% if @match.title != nil %>
-    <h1><%= @match.title.capitalize %></h1>
-  <% end %>
-
-  <div id="map_matchshow"
-      data-markers="<%= @markers.to_json %>"
-      data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
+  <div>
+    <% if @match.title != nil %>
+      <h1><%= @match.title.capitalize %></h1>
+    <% end %>
   </div>
-
+  
 
   <div class="newcard_matchshow">
     <p>Postcode <%= @match.venue.post_code %></p>
