--- a/app/views/venues/index.html.erb
+++ b/app/views/venues/index.html.erb
@@ -12,7 +12,7 @@
           <% end %>
           <div class="">
             <%= link_to venue.name, venue_path(venue) %>
-            <%= link_to 'edit', edit_venue_path(venue) %>
+            <%#= link_to 'edit', edit_venue_path(venue) %>
           </div>
         </div>
       <% end %> 
