Added video on the home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -19,4 +19,22 @@ td {
 td.black { border-color: #000; }
 td.white { border-color: #fff; }
 //
+.home_video {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  object-fit: cover;
+  top: 0;
+  z-index: -2;
+}
 
+// .home-video-wrapper {
+//   height: 100vh;
+//   display: flex;
+// }
+
+h1.home {
+  color: white;
+}
