--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,10 +17,15 @@
         <li class="nav-item">
           <%= link_to "Dashboard", dashboard_path, class: "nav-link" %>
         </li>
+        <li class="nav-item">
+          <%= link_to "Venues", venues_path, class: "nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Games", matches_path, class: "nav-link" %>
+        </li>
         <li class="nav-item dropdown">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/mattevans", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "List of Available Venues", venues_path, class: "dropdown-item" %>
             <%= link_to "Add Venue", new_venue_path, class: "dropdown-item" %>
             <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
           </div>
