--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -24,8 +24,8 @@ a:hover {
 
 .button.position-top{
   position: absolute;
-  margin-left: 8px;
-
+  margin-left: 16px;
+  margin-top: 8px; 
 }
 
 .button-match {
