--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,8 +3,8 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 16px;
   flex-grow: 1;
-  margin-right: 16px;
-  padding: 16px;
+  padding-right: 16px;
+  padding-left: 16px;
 }
 
 .matches-cards {
