--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,13 +8,15 @@
   
   
 </div>
-<div class="form-search">
-  <%= form_tag matches_path, method: :get do %>
-  <%= text_field_tag :query,
-    params[:query],
-    class: "form-control",
-    placeholder: "Find a match"
-    %>
-    <%= submit_tag "Search", class: "btn btn-primary" %>
-  <% end %>
+<div class="container">
+  <div class="form-search">
+    <%= form_tag matches_path, method: :get do %>
+    <%= text_field_tag :query,
+      params[:query],
+      class: "form-control",
+      placeholder: "Find a match"
+      %>
+      <%= submit_tag "Search", class: "button button-match" %>
+    <% end %>
+  </div>
 </div>
