--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -1,30 +1,39 @@
 <%# <%= link_to 'edit match', edit_match_path, class: "button" %>
+<%# <%= link_to 'back to matches', matches_path, class: "button" %>
 
 <div class="container">
 
-  <%= link_to 'back to matches', matches_path, class: "button" %>
-  <div>
+  <div class="text-center">
     <% if @match.title != nil %>
       <h1><%= @match.title.capitalize %></h1>
     <% end %>
+    <%= link_to 'Book Match', match_bookings_path(@match), method: :post, class: "button booking"  %>
   </div>
   
+  <div id="map-venueshow"
+    style="width: 58vw; height: 600px;"
+    data-markers="<%= @marker.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_URL'] %>">
+  </div>
 
   <div class="newcard_matchshow">
     <p>Postcode <%= @match.venue.post_code %></p>
     <p>Match Start Time <%= @match.start_time %></p>
   </div>
 
-  <h2>Description:</h2> <p><%= @match.description %></p>
-  <h2>Number of players needed <%= @match.spots_left %>/<%= @match.no_of_players %></h2>
+  <h2>Match Details:</h2><p><%= @match.description %></p>
+  <h2>Players needed = <%= @match.spots_left %>/<%= @match.no_of_players %></h2>
+  <% if @match.spots_left = @match.no_of_players %>
+  
+  
+  <%= image_tag 'athlete', style:"height: 30px" %>
+  <%= image_tag 'athlete-negative', style:"height: 30px" %>
 
-  <%= link_to 'Book Match', match_bookings_path(@match), method: :post, class: "button"  %>
+
   <button id="show" class="button">Click here to contact host</button>
-
 
   <div class="qrcode d-none">
     <h2>Scan the QR to Contact the Host</h2>
     <%= raw @qr.as_html %>
   </div>
-  
 </div>
