--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -22,9 +22,16 @@
   </div>
 
   <h2>Match Details:</h2><p><%= @match.description %></p>
-  <h2>Players needed = <%= @match.spots_left %>/<%= @match.no_of_players %>
-    <%= image_tag 'athlete', style:"height: 30px" %>
-    <%= image_tag 'athlete-negative', style:"height: 30px" %>
+  <h2>Players needed = <%= @match.spots_left %>/<%= @match.no_of_players%> <br>
+    <% counter = @match.no_of_players %>
+    <% @match.spots_left.times do %>
+      <%= image_tag 'athlete', style:"height: 30px" %>
+      <% counter -= 1 %>
+    <% end %>
+    <% @match.spots_taken.times do %>
+      <%= image_tag 'athlete-negative', style:"height: 30px" %>
+      <% counter -= 1 %>
+    <% end %>
   </h2>
   <h2>Skill level = <%= @match.skill_level %></h2>
 
