--- a/app/views/matches/index.html.erb
+++ b/app/views/matches/index.html.erb
@@ -12,7 +12,7 @@
           <% else %>
         <div class="match-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('https://images.unsplash.com/photo-1567459169668-95d355371bda?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60')">
           <% end %>
-          <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+          <img class="card-img-top" src="" alt="Card image">
           <h4 class="card-title"> <%= link_to match.title, match_path(match) %> <%=match.venue.city%> </h4>
           <p class="edit_match"><%= link_to 'edit match', edit_match_path(match) %></p>
           <p class="delete_match"><%= link_to 'delete match', match_path(match),  method: :delete, data: { confirm: "Are you sure?" } %></p>
