--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -7,9 +7,11 @@
     <% if @match.title != nil %>
       <h1><%= @match.title.capitalize %></h1>
     <% end %>
+    <% if @match.spots_left > 0 %>
     <%= link_to 'Book Match', match_bookings_path(@match), method: :post, class: "button booking"  %>
+    <% end %>
   </div>
-  
+
   <div id="map-venueshow"
     style="100%; height: 300px;"
     data-markers="<%= @marker.to_json %>"
