--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -25,7 +25,7 @@ a:hover {
 .button.position-top{
   position: absolute;
   margin-left: 16px;
-  margin-top: 8px; 
+  margin-top: 8px;
 }
 
 .button-match {
@@ -43,4 +43,19 @@ a:hover {
 
 .booking {
   width: 100%;
+}
+
+.button-dashboard {
+  height: 40px;
+  background-color: #2BFF8B;
+  border: none;
+  border-radius: 8px;
+  color: #013D17;
+  padding: 8px 8px;
+  text-align: right;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 400;
+  weight: 40px;
 }
