Now you can serach by address

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,13 +8,25 @@
   
   
 </div>
-<div class="container">
+<!-- <div class="container">
   <div class="form-search">
     <%= form_tag matches_path, method: :get do %>
     <%= text_field_tag :query,
       params[:query],
       class: "form-control",
-      placeholder: "Find a match"
+      placeholder: "Postcode or City"
+      %>
+      <%= submit_tag "Search", class: "button button-match" %>
+    <% end %>
+  </div>
+</div> -->
+<div class="container">
+  <div class="form-search">
+    <%= form_tag matches_path, method: :get do %>
+      <%= text_field_tag :by_address,
+        params[:by_address],
+        class: "form-control",
+        placeholder: "Postcode or City"
       %>
       <%= submit_tag "Search", class: "button button-match" %>
     <% end %>
