added recently added and games ending soon

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -18,3 +18,10 @@
   text-align: left;
   color: white;
 }
+
+.banner_home {
+//  margin-top:13%;
+//  margin-bottom: 27%;
+  margin-top: 230px;
+  margin-bottom: 535px;
+}
