--- a/app/assets/stylesheets/components/_newcard.scss
+++ b/app/assets/stylesheets/components/_newcard.scss
@@ -25,3 +25,10 @@
 .newcard_matchshow a {
   color: black;
 }
+
+.homepage {
+  background-color: white;
+  text-shadow: none;
+  width: 600px;
+  margin: 16px;
+}
