--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
       <source src="video.mp4"  type="video/mp4">
     </video> -->
     <h1 class="home">Welcome to the Football Bay!</h1>
-    <%= video_tag "video.mp4", loop: :loop, muted: :muted, autoplay: :autoplay, class: "home_video" %>
+    <%= video_tag "video.mp4", loop: :loop, muted: :muted, autoplay: :autoplay, width: '100%' , class: "home_video" %>
   </div>
 
   <div class="container">
@@ -23,7 +23,7 @@
 
 <div class="container">
   
-<h2 style="text-align: center">Recently added games</h2>
+  <h2 style="text-align: center">Recently added games</h2>
   <div class="cards_home">
     <% @matches_last.each do |match| %>
     <div class="cardss">
@@ -44,7 +44,7 @@
     <% end %>
   </div>
 
-<h2 style="text-align: center">Games starting soon</h2>
+  <h2 style="text-align: center">Games starting soon</h2>
   <div class="cards_home">
     <% @matches_first.each do |match| %>
     <div class="cardss">
