--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -28,6 +28,11 @@
         class: "form-control",
         placeholder: "Postcode or City"
       %>
+      <%= text_field_tag :radius,
+        params[:radius],
+        class: "form-control",
+        placeholder: "Radius"
+      %>
       <%= submit_tag "Search", class: "button button-match" %>
     <% end %>
   </div>
