--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -21,17 +21,16 @@ td.white { border-color: #fff; }
 //
 .home_video {
   width: 100vw;
-  height: 100vh;
+  height: 100vh -49px;
   position: absolute;
   display: flex;
   justify-content: center;
   object-fit: cover;
-  top: 0;
   z-index: -10;
 }
 
 .home-video-wrapper {
-  height: 100%;
+  height: 100vh -49px;
   background: rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
@@ -41,4 +40,28 @@ h1.home {
   color: white;
   position: relative;
   text-align: center;
+}
+#instruction {
+  margin: 200px;
+  padding: 100px;
+  text-align: center;
+  color: #919e95;
+  text-shadow: 1px 1px 5px black;
+}
+#banner{
+  text-align: center;
+  background-size: cover;
+  padding: 150px;
+  color: white;
+  text-shadow: 1px 1px 5px black;
+}
+#banner h1 {
+  color: white;
+  font-size: 50px;
+}
+#banner p {
+  color: white;
+  opacity: 0.8;
+  font-size: 30px;
+  font-weight: lighter;
 }
