--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,18 @@
+<!--<div id="banner">
+    	<h1>Football Bay</h1>
+    	<p>New in town and want to play a game, look no further</p>      
+	
+    <p>
+      <a href="#" class="btn btn-primary btn-lg list-inline">Explore</a>
+    </p>
+</div>-->
+
 <div class="home-video-wrapper">
   <!-- <video loop muted autoplay preload="auto">
     <source src="video.mp4"  type="video/mp4">
   </video> -->
-  <h1 class="home">Welcome to the Football Bay!</h1>
+  <h1 class="home"></h1>
   <%= video_tag "video.mp4", loop: :loop, muted: :muted, autoplay: :autoplay, class: "home_video" %>
-  
-  
   
 </div>
 <div class="container">
@@ -18,5 +25,27 @@
       %>
       <%= submit_tag "Search", class: "button button-match" %>
     <% end %>
+    <div id="banner">  
+    <p>
+      <a href="#instruction" class="btn button button-match btn-lg list-inline">Find out about us</a>
+    </p>
+    </div>
+
+    
   </div>
+  
 </div>
+<section id="instruction">
+    <div><h1>ABOUT US</h1>
+      <p>
+      Welcome to Football bay. Have you just recently moved area,
+      city or even country? if the answer to any of those questions was yes
+      and you are looking for a game to play then look no further.
+      Follow the simple steps below if you are looking to play a game of football,
+      competative or otherwise.
+       </p>
+      <p>1. Find a game</p>
+      <p>2. Book a game</p>
+      <p>3. Play a game</p>      
+    </div>
+    </section>
