changed cards sizes. fixed small video problem.

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -64,3 +64,10 @@ a:hover {
   color: black;
   position:relative; left: -10px; top:30px;
 }
+
+.button.small {
+  padding: 4px 4px;
+  margin-bottom: 4px;
+  margin-top: 16px;
+  display: block;
+}
