--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -51,16 +51,17 @@
   background-color: white;
   border-radius: 4px;
   margin-bottom: 16px;
-  width: 150px;
+  width: 184px;
  }
 
  .cardss h3 {
    font-size: 13px;
+   padding-top: 6px;
  }
 
  .cardss p {
    font-size: 11px;
-   margin: 0;
+   margin-bottom: 7px;
  }
 
 .cardss:hover{
