--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -33,7 +33,7 @@
         <%= submit_tag "Search", class: "button button-match" %>
       <% end %>
       <p>
-        <a href="#instruction" class="btn button button-match btn-lg list-inline">Find out about us</a>
+        <a href="#instruction" class="btn button button-match btn-lg list-inline", style="width: -webkit-fill-available;">Find out about us</a>
       </p>
     </div>
 
