--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -56,6 +56,14 @@
   width: 184px;
  }
 
+ .cardss.games {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    background-color: white;
+    border-radius: 4px;
+    margin-bottom: 16px;
+    width: 250px;
+ }
+
  .cardss h3 {
    font-size: 13px;
    padding-top: 6px;
@@ -65,6 +73,16 @@
    font-size: 11px;
    margin-bottom: 7px;
  }
+
+ .cardss.games h3 {
+  font-size: 15px;
+  padding-top: 6px;
+}
+
+.cardss.games p {
+  font-size: 13px;
+  margin-bottom: 7px;
+}
 
 .cardss:hover{
   box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -79,3 +97,7 @@
   padding: 2px 8px;
 }
 
+// .top {
+//   position: absolute;
+//   right: 898px;
+// }
