--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -39,6 +39,12 @@ td.white { border-color: #fff; }
   justify-content: center;
 }
 
+.margin-top {
+  color: white;
+  position: relative;
+  text-align: center;
+  margin-top: 16px;
+}
 h1.home {
   color: white;
   position: relative;
@@ -71,3 +77,10 @@ h1.home {
   font-weight: lighter;
 }
 
+.white-text {
+  color: white;
+}
+
+.background-shadow {
+  background-color: rgba($color: #000000, $alpha: 0.2);
+}
