--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,6 +1,30 @@
 <div class="container justify-content-center">
   <h1 class="text-center"> Your Dashboard</h1>
   <div class="container">
+    <!--<% upcoming_bookings =  current_user.booked_matches.select{ |booking| booking.start_time >= DateTime.now }  %> -->
+    <%= upcoming_bookings %>
+    <!-- performance wise it's better to have the logic below implemented in the controller, but becuase we don't have a lot of records it's fine to do this in the view-->
+    <%# @matches = @matches.select{ |match| match.start_time >= DateTime.now } %>
+    <% current_user.bookings.each do |booking| %>
+      <div class="newcard mb-3">
+        <p class="text-center">
+          <%= link_to booking_path(booking), method: :delete, data: { confirm: "Are you sure?"} do %>
+          <i class="fas fa-trash-alt" style="font-size: 1.5em"></i>
+          <% end %>
+          <span class="text-danger"><%= booking.match.title %></span>
+          <%= booking.match.start_time.strftime("%A, %d %b %Y %l:%M%p") %> -
+          <%= booking.match.end_time.strftime("%l:%M%p") %> at
+          <%= booking.match.venue.post_code %>,
+          <%= booking.match.no_of_players %> a side game by <%= booking.match.user.email %>
+          <%= booking.match.description %>
+        </p>
+      </div>
+    <% end %>
+  </div>
+
+  <div class="container">
+    <!-- performance wise it's better to have the logic below implemented in the controller, but becuase we don't have a lot of records it's fine to do this in the view-->
+    <%# @matches = @matches.select{ |match| match.start_time >= DateTime.now } %>
     <% current_user.bookings.each do |booking| %>
       <div class="newcard mb-3">
         <p class="text-center">
@@ -18,3 +42,5 @@
     <% end %>
   </div>
 </div>
+
+
