--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container login-img white-text text-center">
 
-  <h1>New Venue</h1>
+  <h1>Add a place where games can be hosted</h1>
 
   <%= simple_form_for(@venue) do |v| %>
     <%= v.input :name %>
@@ -12,7 +12,7 @@
     <%= v.input :surface, collection: ["Grass", "Hybrid", "Synthetic", "2G artificial grass", "3G artificial grass"] %>
     <%= v.input :floodlit %>
     <%= v.input :photo, as: :file %>
-    <%= v.button :submit %>
+    <%= v.button :submit, class: "btn button button-match btn-lg list-inline", style: "width: -webkit-fill-available;" %>
   <% end %>
 
 </div>
