--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -70,4 +70,8 @@ h1.home {
   font-size: 30px;
   font-weight: lighter;
 }
-
+.description {
+  text-align: center;
+  display: inline-block;
+  margin-top: none;
+}
