--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -5,7 +5,7 @@
       <h1>Booking #<%= @booking.id %> <small><span class="badge badge-primary"><%= @booking.state %></span></small></h1>
       <ul class="list-unstyled">
         <li><strong>BOOKING DATE</strong> <%= @booking.created_at.to_date %></li>
-        <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @booking.amount %></li>
+        <li><strong>TOTAL</strong> <%= humanized_money_with_symbol @booking.match.venue.price %></li>
         </li>
       </ul>
     </div>
