--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -1,6 +1,8 @@
 .login-img {
 	background-image: image-url("login.jpg");
-	min-height: 100vh;	
+	min-height: 100vh;
+	background-repeat: no-repeat;
+	background-size: cover;
 	}
 
 .form-login {
