Some forms changes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,4 @@
 @import "components/newcard";
 @import "components/my-container";
 @import "components/map";
+@import "components/container_forms";
