--- a/app/assets/stylesheets/components/_login_form.scss
+++ b/app/assets/stylesheets/components/_login_form.scss
@@ -6,7 +6,7 @@
 	}
 
 .form-login {
-	background: transparent;
+	background: rgba(255, 255, 255, 0.5);
 	padding: 10px 20px;
 	margin-top: 50px;
 	border-radius: 3px;
@@ -14,6 +14,7 @@
 	box-shadow: 1px 1px 2px rgba(0,0,0,0.1);	 	
 	
 h2 {
+	text-align: center;
 	font-size: 25px;
 	font-weight: bold;
 	margin-bottom: 30px;
