Added gradient into the form

--- a/app/assets/stylesheets/components/_container_forms.scss
+++ b/app/assets/stylesheets/components/_container_forms.scss
@@ -1,5 +1,7 @@
 .container-forms {
-  display: grid;
-  padding-left: 10%;
-  padding-right: 50%;
+    display: grid;
+    padding-left: 10%;
+    padding-right: 50%;
+    border-radius: 16px;
+    background-image: linear-gradient(to right, #e9f50e, #47b8b0)
 }
