--- a/app/views/venues/new.html.erb
+++ b/app/views/venues/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="container-forms">
-    <h1>Add a place where games can be hosted</h1>
-
+    
     <%= simple_form_for(@venue) do |v| %>
+      <h2>Venue Registration Form</h2>
       <%= v.input :name %>
       <%= v.input :address_line_1 %>
       <%= v.input :address_line_2 %>
@@ -14,5 +14,9 @@
       <%= v.input :photo, as: :file %>
       <%= v.button :submit, class: "btn button button-match btn-lg list-inline", style: "width: -webkit-fill-available;" %>
     <% end %>
+    <div class="container-forms-right">
+      <%= image_tag('goalkeeper.svg', class: "img-form") %>
+    </div>
   </div>
+  
 </div>
