changed newcard to correct position, changed body text

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -35,3 +35,11 @@ h1 {
   font-family: 'Bebas Neue', cursive;
   font-size: 100px;
 }
+
+h2 {
+  font-family: 'Bebas Neue', cursive;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
